--- a/app/less/hosted-apis.less
+++ b/app/less/hosted-apis.less
@@ -1,5 +1,6 @@
 @import "engine-ui-import.less";
 @import "dashboard.less";
+@import "button-groups.less";
 
 @footer-height: 60px;
 
@@ -35,15 +36,6 @@ body {
   overflow:auto;
   height: 100%;
 }
-
-/*
-a.nav-previous {
-  &:extend(.pull-right all);
-
-  margin: 2.5% 2% 0;
-  text-decoration: none;
-}
-*/
 
 // Social Network Styling
 // --------------------------------------------------
@@ -133,4 +125,11 @@ footer {
       padding-left: 1%;
     }
   }
+}
+
+// Bar **UI Element needs revisiting**
+// --------------------------------------------------
+.bar,
+.alert {
+  margin: 0 0 1.5% 0;
 }
